# vite-wasm-pack-starter

./: .gitignore  .pnp.cjs  .yarnrc.yml  Cargo.toml  Makefile  README.md  index.html  package.json  vite.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
src/: lib.rs
web/: main.ts
