[package]
name = "core"
version = "0.1.0"
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.48"
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3.55"
[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  "console"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[lib]
name = "core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
